crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_test_body.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "test \"name\" = do\n    x <- action"
---
nash::syntax

  × A do block must end with an expression.
   ╭─[src/Main.nash:2:5]
 1 │ test "name" = do
 2 │     x <- action
   ·     ─
   ╰────
  help: Add a final expression after this binding.
