crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_test_equals.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
MISSING TEST EQUALS

  × I have the test name, but I got stuck here:
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Add an = before the test body.
