crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_test_fuzzer.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "prop \"name\" = let x via ) in do"
---
nash::syntax

  × Expected an expression in a definition.
   ╭─[src/Main.nash:1:25]
 1 │ prop "name" = let x via ) in do
   ·                         ─
   ╰────
  help: Add an expression or `todo` for an unfinished body.
