crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_test_in.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "prop \"name\" = let x via generate do"
---
nash::syntax

  × Expected `in` after the generated inputs.
   ╭─[src/Main.nash:1:30]
 1 │ prop "name" = let x via generate do
   ·                              ─
   ╰────
  help: Add `in` before the property body.
