crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_test_indent_binder.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "prop \"name\" = let\nx via generate in do"
---
nash::syntax

  × Expected generated inputs for the property.
   ╭─[src/Main.nash:2:1]
 1 │ prop "name" = let
 2 │ x via generate in do
   · ─
   ╰────
  help: Write `let pattern via generator` before `in`.
