crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_test_indent_body.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
  × Expected a do block for the test body.
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Write `do` and indent its statements.
