crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_test_indent_equals.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
nash::syntax

  × Expected `=` before the test body.
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Add `=` after the test name and modifiers.
