crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_test_indent_in.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "prop \"name\" = let x via generate\nin do"
---
nash::syntax

  × Expected `in` after the generated inputs.
   ╭─[src/Main.nash:2:1]
 1 │ prop "name" = let x via generate
 2 │ in do
   · ─
   ╰────
  help: Add `in` before the property body.
