crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_test_indent_name.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "test\n\"name\""
---
nash::syntax

  × Expected a quoted test name.
   ╭─[src/Main.nash:2:1]
 1 │ test
 2 │ "name"
   · ─
   ╰────
  help: Give the test a name in double quotes.
