crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_test_let.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "prop \"name\" = do"
---
nash::syntax

  × Expected generated inputs for the property.
   ╭─[src/Main.nash:1:15]
 1 │ prop "name" = do
   ·               ─
   ╰────
  help: Write `let pattern via generator` before `in`.
